maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:30: error: expected class or object definition
def keepHandOnSideWall(): Boolean = {
^IslandMaze:40: error: expected class or object definition
def estNord(): Boolean = {
^IslandMaze:49: error: Unmatched closing brace '}' ignored here
}
^